Added buttons and hover effects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <div id="search">
 	<img src="logo11w.png">
 	<form>
-		<input type="text">
+		<input type="text"><br>
+		<button type="submit">Google Search</button>
+		<button type="submit">I'm Feeling Lucky</button>
 	</form>
 </div>
 
