Added top navbar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 </head>
 <body>
 <div id="nav">
-	
+	<ul>
+		<li>+You</li>
+		<li>Gmail</li>
+		<li>Images</li>
+		<li><img src="app_menu.png"></li>
+		<li><button type="submit">Sign in</button></li>
+	</ul>
 </div>
 
 <div id="search">
