--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 <div id="nav">
 	<ul>
-		<li>+You</li>
-		<li>Gmail</li>
-		<li>Images</li>
+		<li><a href="">+You</a></li>
+		<li><a href="">Gmail</a></li>
+		<li><a href="">Images</a></li>
 		<li><img src="app_menu.png"></li>
 		<li><button type="submit">Sign in</button></li>
 	</ul>
